--- a/index.html
+++ b/index.html
@@ -105,7 +105,9 @@
         </nav>
         <ul class="header-contact list">
           <li class="header-contact__item">
-            <a class="header-contact__link" href="mailto:info@devstudio.com"
+            <a
+              class="header-contact__link header-contact__link--top"
+              href="mailto:info@devstudio.com"
               ><svg class="header-contact__icon-1">
                 <use href="./images/icons.svg#icon-envelope"></use>
               </svg>
@@ -113,7 +115,10 @@
             >
           </li>
           <li class="header-contact__item">
-            <a class="header-contact__link" href="tel:+380961111111">
+            <a
+              class="header-contact__link header-contact__link--bottom"
+              href="tel:+380961111111"
+            >
               <svg class="header-contact__icon-2">
                 <use href="./images/icons.svg#icon-smartphone"></use>
               </svg>
@@ -132,7 +137,11 @@
     <div class="mobile-menu" data-menu>
       <ul class="mobile-menu-nav list">
         <li class="mobile-menu-nav__item">
-          <a class="mobile-menu-nav__link link" href="./index.html">Студия</a>
+          <a
+            class="mobile-menu-nav__link mobile-menu-nav__link--current link"
+            href="./index.html"
+            >Студия</a
+          >
         </li>
         <li class="mobile-menu-nav__item">
           <a class="mobile-menu-nav__link link" href="./portfolio.html"
@@ -160,16 +169,16 @@
       </ul>
       <ul class="mobile-menu-social list">
         <li class="mobile-menu-social__item">
-          <a class="mobile-menu-social__link link" href="http://">Instagram</a>
+          <a class="mobile-menu-social__link link" href="#">Instagram</a>
         </li>
         <li class="mobile-menu-social__item">
-          <a class="mobile-menu-social__link link" href="http://">Twitter</a>
+          <a class="mobile-menu-social__link link" href="#">Twitter</a>
         </li>
         <li class="mobile-menu-social__item">
-          <a class="mobile-menu-social__link link" href="http://">Facebook</a>
+          <a class="mobile-menu-social__link link" href="#">Facebook</a>
         </li>
         <li class="mobile-menu-social__item">
-          <a class="mobile-menu-social__link link" href="http://">LinkedIn</a>
+          <a class="mobile-menu-social__link link" href="#">LinkedIn</a>
         </li>
       </ul>
     </div>
