--- a/portfolio.html
+++ b/portfolio.html
@@ -216,7 +216,9 @@
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
                 </div>
-                <div class="portfolio-grid-bottom">
+                <div
+                  class="portfolio-grid-bottom portfolio-grid-bottom-padding-bottom"
+                >
                   <h2 class="portfolio-grid-bottom__lable">Технокряк</h2>
                   <p class="portfolio-grid-bottom__text">Веб-сайт</p>
                 </div>
@@ -781,7 +783,7 @@
     <!-- Footer container -->
     <footer class="footer">
       <div class="footer-container container">
-        <div>
+        <div class="footer-adress-container">
           <a class="footer-logo" href="./index.html"
             ><span class="footer-logo__part">Web</span>Studio</a
           >
